[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-accountsdb-plugin-manager"
description = "The Domino AccountsDb plugin manager."
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-validator"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.2"
log = "0.4.11"
serde = "1.0.131"
serde_derive = "1.0.103"
serde_json = "1.0.73"
domino-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-rpc = { path = "../rpc", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
