[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-accountsdb-plugin-postgres"
description = "The Domino AccountsDb plugin for PostgreSQL database."
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
serde = "1.0.131"
serde_derive = "1.0.103"
serde_json = "1.0.73"
domino-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
thiserror = "1.0.30"
tokio-postgres = "0.7.4"

[dev-dependencies]
domino-account-decoder = { path = "../account-decoder", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
