[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-banking-bench"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
domino-core = { path = "../core", version = "=1.10.0" }
domino-gossip = { path = "../gossip", version = "=1.10.0" }
domino-ledger = { path = "../ledger", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-poh = { path = "../poh", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
