[package]
name = "domino-banks-client"
version = "1.10.0"
description = "Domino banks client"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/domino-labs/domino"
license = "Apache-2.0"
homepage = "https://domino.com/"
documentation = "https://docs.rs/domino-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.1"
futures = "0.3"
domino-banks-interface = { path = "../banks-interface", version = "=1.10.0" }
domino-program = { path = "../sdk/program", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-banks-server = { path = "../banks-server", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "domino_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
