[package]
name = "domino-banks-interface"
version = "1.10.0"
description = "Domino banks RPC interface"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
tarpc = { version = "0.26.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "domino_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
