[package]
name = "domino-banks-server"
version = "1.10.0"
description = "Domino banks server"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3"
domino-banks-interface = { path = "../banks-interface", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-send-transaction-service = { path = "../send-transaction-service", version = "=1.10.0" }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "domino_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
