[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-bench-streamer"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
publish = false

[dependencies]
clap = "2.33.1"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-net-utils = { path = "../net-utils", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
