[package]
name = "domino-clap-utils"
version = "1.10.0"
description = "Domino utilities for the clap"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-clap-utils"
edition = "2021"

[dependencies]
clap = "2.33.0"
rpassword = "5.0"
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-remote-wallet = { path = "../remote-wallet", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
name = "domino_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
