[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-cli-config"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-cli-config"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.131"
serde_derive = "1.0.103"
serde_yaml = "0.8.23"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.54"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
