[package]
name = "domino-client-test"
version = "1.10.0"
description = "Domino RPC Test"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/domino-labs/domino"
license = "Apache-2.0"
homepage = "https://domino.com/"
documentation = "https://docs.rs/domino-client-test"
edition = "2021"

[dependencies]
serde_json = "1.0.73"
serial_test = "0.5.1"
domino-client = { path = "../client", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-merkle-tree = { path = "../merkle-tree", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
domino-rpc = { path = "../rpc", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-test-validator = { path = "../test-validator", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
systemstat = "0.1.10"

[dev-dependencies]
domino-logger = { path = "../logger", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
