[package]
name = "domino-client"
version = "1.10.0"
description = "Domino Client"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/domino-labs/domino"
homepage = "https://domino.com/"
documentation = "https://docs.rs/domino-client"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.0"
indicatif = "0.16.2"
jsonrpc-core = "18.0.0"
log = "0.4.14"
rayon = "1.5.1"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.131"
serde_derive = "1.0.103"
serde_json = "1.0.73"
domino-account-decoder = { path = "../account-decoder", version = "=1.10.0" }
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-faucet = { path = "../faucet", version = "=1.10.0" }
domino-net-utils = { path = "../net-utils", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.16.0", features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"

[dev-dependencies]
assert_matches = "1.5.0"
jsonrpc-http-server = "18.0.0"
domino-logger = { path = "../logger", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
