[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-dos"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
domino-core = { path = "../core", version = "=1.10.0" }
domino-gossip = { path = "../gossip", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-net-utils = { path = "../net-utils", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
domino-client = { path = "../client", version = "=1.10.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
