[package]
name = "domino-download-utils"
version = "1.10.0"
description = "Domino Download Utils"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "domino_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
