[package]
name = "domino-entry"
version = "1.10.0"
description = "Domino Entry"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-poh"
edition = "2021"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.131"
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-merkle-tree = { path = "../merkle-tree", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
bincode = "1.3.3"

[dev-dependencies]
matches = "0.1.9"
domino-logger = { path = "../logger", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "domino_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
