[package]
name = "domino-faucet"
version = "1.10.0"
description = "Domino Faucet"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
log = "0.4.14"
serde = "1.0.131"
serde_derive = "1.0.103"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-cli-config = { path = "../cli-config", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "domino_faucet"

[[bin]]
name = "domino-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
