[package]
name = "domino-genesis-utils"
version = "1.10.0"
description = "Domino Genesis Utils"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-download-utils"
edition = "2021"

[dependencies]
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-download-utils = { path = "../download-utils", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }

[lib]
crate-type = ["lib"]
name = "domino_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
