[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-genesis"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.131"
serde_json = "1.0.73"
serde_yaml = "0.8.23"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-cli-config = { path = "../cli-config", version = "=1.10.0" }
domino-entry = { path = "../entry", version = "=1.10.0" }
domino-ledger = { path = "../ledger", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-stake-program = { path = "../programs/stake", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.2.0"

[[bin]]
name = "domino-genesis"
path = "src/main.rs"

[lib]
name = "domino_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
