[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-gossip"

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
flate2 = "1.0"
indexmap = { version = "1.7", features = ["rayon"] }
itertools = "0.10.3"
log = "0.4.14"
lru = "0.7.0"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.8.4"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.131"
serde_bytes = "0.11"
serde_derive = "1.0.103"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-client = { path = "../client", version = "=1.10.0" }
domino-entry = { path = "../entry", version = "=1.10.0" }
domino-frozen-abi = { path = "../frozen-abi", version = "=1.10.0" }
domino-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.10.0" }
domino-ledger = { path = "../ledger", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-net-utils = { path = "../net-utils", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
thiserror = "1.0"

[dev-dependencies]
num_cpus = "1.13.0"
serial_test = "0.5.1"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "domino-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
