[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-install"
description = "The domino cluster software installer"
version = "1.10.0"
repository = "https://github.com/domino-labs/domino"
license = "Apache-2.0"
homepage = "https://domino.com/"
documentation = "https://docs.rs/domino-install"

[dependencies]
atty = "0.2.11"
bincode = "1.3.3"
bzip2 = "0.4.3"
chrono = { version = "0.4.11", features = ["serde"] }
clap = { version = "2.33.1" }
console = "0.15.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
dirs-next = "2.0.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
nix = "0.23.0"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_yaml = "0.8.23"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-client = { path = "../client", version = "=1.10.0" }
domino-config-program = { path = "../programs/config", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
semver = "1.0.4"
tar = "0.4.37"
tempfile = "3.2.0"
url = "2.2.2"

[target."cfg(windows)".dependencies]
winapi = "0.3.8"
winreg = "0.10"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
