[package]
name = "domino-keygen"
version = "1.10.0"
description = "Domino key generation utility"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-keygen"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.0"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-cli-config = { path = "../cli-config", version = "=1.10.0" }
domino-remote-wallet = { path = "../remote-wallet", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "domino-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
