[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-ledger-tool"

[dependencies]
bs58 = "0.4.0"
bytecount = "0.6.2"
clap = "2.33.1"
csv = "1.1.6"
dashmap = "5.0.0"
histogram = "*"
itertools = "0.10.3"
log = { version = "0.4.14" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.8.23"
domino-clap-utils = { path = "../clap-utils", version = "=1.10.0" }
domino-cli-output = { path = "../cli-output", version = "=1.10.0" }
domino-core = { path = "../core", version = "=1.10.0" }
domino-entry = { path = "../entry", version = "=1.10.0" }
domino-ledger = { path = "../ledger", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-stake-program = { path = "../programs/stake", version = "=1.10.0" }
domino-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.0" }
domino-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = {package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"]}

[dev-dependencies]
assert_cmd = "2.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.3.12"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
