[package]
name = "domino-ledger"
version = "1.10.0"
description = "Domino ledger"
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-ledger"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = { version = "0.4.11", features = ["serde"] }
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
fs_extra = "1.2.0"
futures = "0.3.17"
itertools = "0.10.3"
lazy_static = "1.4.0"
libc = "0.2.112"
log = { version = "0.4.14" }
num-derive = "0.3"
num-traits = "0.2"
num_cpus = "1.13.0"
prost = "0.9.0"
rand = "0.8.4"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.131"
serde_bytes = "0.11.5"
sha2 = "0.10.0"
domino-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.10.0" }
domino-entry = { path = "../entry", version = "=1.10.0" }
domino-frozen-abi = { path = "../frozen-abi", version = "=1.10.0" }
domino-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.10.0" }
domino-transaction-status = { path = "../transaction-status", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-measure = { path = "../measure", version = "=1.10.0" }
domino-metrics = { path = "../metrics", version = "=1.10.0" }
domino-perf = { path = "../perf", version = "=1.10.0" }
domino-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.0" }
domino-storage-proto = { path = "../storage-proto", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.2.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
trees = "0.4.2"

# Disable reed-solomon-erasure/simd-accel feature on aarch64 only since it
# requires clang to support -march=native.
[target.'cfg(any(target_arch = "aarch64", target_arch = "aarch64_apple_darwin"))'.dependencies]
reed-solomon-erasure = { version = "4.0.2" }

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "aarch64_apple_darwin")))'.dependencies]
reed-solomon-erasure = { version = "4.0.2", features = ["simd-accel"] }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.17.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
assert_matches = "1.5.0"
matches = "0.1.9"
domino-account-decoder = { path = "../account-decoder", version = "=1.10.0" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "domino_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
