[package]
authors = ["Domino Maintainers <maintainers@domino.foundation>"]
edition = "2021"
name = "domino-local-cluster"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.0"
repository = "https://github.com/Domino-Blockchain/domino"
license = "Apache-2.0"
homepage = "https://dominochain.com/"
documentation = "https://docs.rs/domino-local-cluster"

[dependencies]
crossbeam-channel = "0.5"
itertools = "0.10.3"
gag = "1.0.0"
fs_extra = "1.2.0"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
domino-config-program = { path = "../programs/config", version = "=1.10.0" }
domino-core = { path = "../core", version = "=1.10.0" }
domino-client = { path = "../client", version = "=1.10.0" }
domino-download-utils = { path = "../download-utils", version = "=1.10.0" }
domino-entry = { path = "../entry", version = "=1.10.0" }
domino-gossip = { path = "../gossip", version = "=1.10.0" }
domino-ledger = { path = "../ledger", version = "=1.10.0" }
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-runtime = { path = "../runtime", version = "=1.10.0" }
domino-sdk = { path = "../sdk", version = "=1.10.0" }
domino-stake-program = { path = "../programs/stake", version = "=1.10.0" }
domino-streamer = { path = "../streamer", version = "=1.10.0" }
domino-vote-program = { path = "../programs/vote", version = "=1.10.0" }
tempfile = "3.2.0"

[dev-dependencies]
assert_matches = "1.5.0"
serial_test = "0.5.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
