[package]
authors = ["Domino Maintainers <maintainers@domino.com>"]
edition = "2021"
name = "domino-log-analyzer"
description = "The domino cluster network analysis tool"
version = "1.10.0"
repository = "https://github.com/domino-labs/domino"
license = "Apache-2.0"
homepage = "https://domino.com/"
publish = false

[dependencies]
byte-unit = "4.0.13"
clap = "2.33.1"
serde = "1.0.131"
serde_json = "1.0.73"
domino-logger = { path = "../logger", version = "=1.10.0" }
domino-version = { path = "../version", version = "=1.10.0" }

[[bin]]
name = "domino-log-analyzer"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
